Bug: Anchor tag state styles and button state styles were incomplete. The state styles were extended to make sure the link colours provide sufficient contrast and match ontario.ca styles

--- a/ckanext/ontario_theme/fanstatic/buttons.less
+++ b/ckanext/ontario_theme/fanstatic/buttons.less
@@ -6,6 +6,8 @@
   color: #fff;
   &:focus,
   &.focus,
+  &:visited,
+  &.visited,
   &:hover,
   &:active,
   &.active {
@@ -17,6 +19,8 @@
   color: #fff;
   &:focus,
   &.focus,
+  &:visited,
+  &.visited,
   &:hover,
   &:active,
   &.active {
